--- a/trunk/paper/conceitosBasicos.tex
+++ b/trunk/paper/conceitosBasicos.tex
@@ -11,7 +11,7 @@ G . (P-Q)
 
 Onde P é a posição do ponto que está sendo calculado o valor do ruído, Q é a posição de um de seus vizinhos, e G é o valor de um vetor gradiente pseudo-aleatório. Os resultados do produto interno dos vizinhos é então interpolado, garantindo assim que haverá uma suave transição entre todos os valores retornados.
 
-O resultado, como pode ser visto na Figura \ref{fig:noise}, apresenta transições suaves, diferentemente do ruído aleatório.
+O resultado, como pode ser visto na Figura \ref{fig:noise}, apresenta transições suaves, diferentemente do ruído branco (puramente aleatório).
 
 \begin{figure}[h]
 	\center{\includegraphics[width=0.5\linewidth]{img/noise.png}}
