--- a/trunk/paper/paper.tex
+++ b/trunk/paper/paper.tex
@@ -17,7 +17,7 @@
 \usepackage{url}
 
 %% Paper title.
-\title{Um Sistema para Geração Procedural de Terrenos Pseudo-Infinitos em Tempo-Real Utilizando Arquiteturas GPU e CPU}
+\title{Um Sistema para Geração Procedural de Terrenos Pseudo-Infinitos em Tempo-Real Utilizando GPU e CPU}
 
 %% Author and Affiliation (multiple authors). Use: and between authors
 
@@ -53,7 +53,7 @@
 %% Abstract section.
 
 \begin{abstract}
-O rápido crescimento do poder de processamento das placas gráficas fez com que diversas tarefas migrassem da CPU para a GPU. Porém, as unidades de processamento gráfico podem ser vistas como aliadas da CPU, e não rivais. Este trabalho propõe um sistema \emph{multithread} que utilize tanto a CPU quanto a GPU para minimizar o tempo gasto com a geração procedural de terrenos e permitir uma navegação fluida através de um mundo pseudo-infinito gerado proceduralmente.
+O rápido crescimento do poder de processamento das placas gráficas fez com que diversas tarefas migrassem da CPU para a GPU. Porém, as unidades de processamento gráfico podem ser vistas como aliadas da CPU, e não rivais. Este trabalho propõe um sistema \emph{multithread} que utiliza tanto a CPU quanto a GPU para minimizar o tempo gasto com a geração procedural de terrenos e permitir uma navegação fluida através de um mundo pseudo-infinito gerado proceduralmente.
 
 Ao final, uma comparação é feita com base em testes com três modelos de geração (apenas CPU, apenas GPU, GPU e CPU), com o objetivo de expor suas vantagens e desvantagens.
 \end{abstract}
