--- a/trunk/paper/proposta.tex
+++ b/trunk/paper/proposta.tex
@@ -8,7 +8,7 @@ O terreno geral é dividido em terrenos menores (chamados \emph{patchs}), como mo
 	\caption{\label{fig:resultados:grid} \emph{Patchs} exibidos em um \emph{grid}.}
 \end{figure}
 
-Considerando o usuário inicialmente localizado no \emph{patch} central, ao mover-se para um \emph{patch} vizinho, o sistema irá requisitar a geraçaõ de novos \emph{patchs}, vizinhos a aqueles que estão na borda do grid. O número de vizinhos gerados, bem como a quantidade de vizinhos do \emph{patch} central são variáveis do sistema, podendo ser adaptadas, pelo usuário, de acordo com o poder de processamento de sua máquina.
+Considerando o usuário inicialmente localizado no \emph{patch} central, ao mover-se para um \emph{patch} vizinho, o sistema irá requisitar a geração de novos \emph{patchs}, vizinhos a aqueles que estão na borda do grid. O número de vizinhos gerados, bem como a quantidade de vizinhos do \emph{patch} central são variáveis do sistema, podendo ser adaptadas, pelo usuário, de acordo com o poder de processamento de sua máquina.
 
 Para garantir uma visualização fluida do terreno, minimizando as interrupções com a geração, o sistema proposto decidirá qual arquitetura (GPU ou CPU) será utilizada na geração dos \emph{patchs} a partir de uma variável $\alpha$, que representa a porcentagem de gerações que ocorrerão na \emph{GPU}. $1 - \alpha$ representará, portanto a porcentagem de gerações na \emph{CPU}.
 
@@ -37,7 +37,7 @@ A utilização de chamadas como \textbf{glFinish()} para sincronizar a CPU e a GPU
 Uma outra opção para a sincronização seria a extensão \textbf{GL\_NV\_fence} \cite{nvFence}, que oferece funções para sincronização semelhantes ao \textbf{glFinish()} e \textbf{glFlush()}, porém com um grau maior de controle sobre quais comandos OpenGL deverão ser executados na chamada. Mais uma vez, porém, a extensão não está disponível para placas ATI.
 
 \subsection{Geração}
-Toda a geração dos terrenos na GPU é feita através de um \emph{fragment shader} (versão 3.0), utilizando o ruído Perlin como foi proposto em \cite{improvedPerlinNoise}. Como toda computação de \emph{shaders} fica limitada a geometrias ou texturas, foi preciso renderizar um quadrado utilizando as funções OpenGL, para que, dessa forma, fosse possível aplicar os \emph{shaders} às suas primitivas e iniciar os cálculos necessários. O resultado da geração é renderizado em um \emph{framebuffer} \emph{off-screen}, que não é exibido na tela, através da extenção FBO, que permite criar novos \emph{buffers}.
+Toda a geração dos terrenos na GPU é feita através de um \emph{fragment shader} (versão 3.0), utilizando o ruído Perlin como foi proposto em \cite{improvedPerlinNoise}. Como toda computação de \emph{shaders} fica limitada a geometrias ou texturas, foi preciso renderizar um quadrado utilizando as funções OpenGL, para que, dessa forma, fosse possível aplicar os \emph{shaders} às suas primitivas e iniciar os cálculos necessários. O resultado da geração é renderizado em um \emph{framebuffer} \emph{off-screen} (que não é exibido na tela), através da extenção FBO, que permite criar novos \emph{buffers}.
 
 O cálculo dos vetores gradientes, necessário no ruído Perlin, é feito na CPU, apenas no início do sistema, e depois é acessado no \emph{fragment shader} como uma textura 2D.
 
@@ -56,7 +56,7 @@ O passo inicial é a geração de uma malha (conjunto de vértices) de tamanho pré-d
 	\caption{\label{fig:malha} Malha inicial para visualização dos terrenos.}
 \end{figure}
 
-A malha é gerada de tal forma que um número maior de vértices está concentrado no centro. Quanto maior a distância, menor o número de vértices presentes. Isto propicia uma maneira rápida e fácil de implementar um nível de detalhamento (quanto maior a distância do centro, menor será a necessidade de se renderizar o terreno em alta fidelidade).
+A malha é gerada de tal forma que um número maior de vértices está concentrado no centro. Quanto maior a distância, menor o número de vértices presentes. Isto propicia uma maneira rápida e fácil de implementar um algoritmo de nível de detalhe (quanto maior a distância do centro, menor será a necessidade de se renderizar o terreno em alta fidelidade).
 
 Como a malha é gerada apenas uma única vez (no início da execução), não é preciso criar repetidas malhas a medida que o jogador percorre o terreno. Apenas os mapas de altura de cada \emph{patch} são trocados, como mostra a Figura \ref{fig:texturas}
 
@@ -65,7 +65,7 @@ Como a malha é gerada apenas uma única vez (no início da execução), não é precis
 	\caption{\label{fig:texturas} Movimentação da câmera para um outro \emph{patchs}.}
 \end{figure}
 
-Na Figura \ref{fig:texturas} é possível notar o deslocamento dos mapas de textura quando a câmera move para o \emph{patch} superior ao (1,1). Para que haja uma transição, uma matriz de translação, com valores iguais ao tamanho do \emph{patch}, é feita e multiplicada à matriz responsável por renderizar todas as primitivas, resultando na translação de todos os \emph{patchs}. 
+Na Figura \ref{fig:texturas} é possível notar o deslocamento dos mapas de altura quando a câmera move para o \emph{patch} superior ao (1,1). Para que haja uma transição, uma matriz de translação, com valores iguais ao tamanho do \emph{patch}, é feita e multiplicada à matriz responsável por renderizar todas as primitivas, resultando na translação de todos os \emph{patchs}. 
 
-Este método diminuiu a necessidade de implementação de um algoritmo de nível de detalhe mais robusto. Além disso, como sabemos o número de vértices antecipadamente, a performance do aplicativo tem uma menor chance de sofrer quedas bruscas de rendimento.
+Este algoritmo de nível de detalhe se mostrou bastante eficaz para este trabalho, não sendo necessária a implementação de um algoritmo LOD mais robusto. Além disso, como sabemos o número de vértices antecipadamente, a performance do aplicativo tem uma menor chance de sofrer quedas bruscas de rendimento.
 
