--- a/trunk/paper/contribuicoes.tex
+++ b/trunk/paper/contribuicoes.tex
@@ -1,7 +1,7 @@
-\section{Contribuições}
-\label{contribuicoes}
+%\section{Contribuições}
+%\label{contribuicoes}
 
-O trabalho apresentado aqui possui as seguintes contribuições:
+Portanto, o trabalho apresentado aqui possui as seguintes contribuições:
 
 \begin{itemize}
 	\item Propor um sistema de geração procedural de terrenos que faça uso tanto da CPU quanto da GPU.
