--- a/trunk/paper/paper.bib
+++ b/trunk/paper/paper.bib
@@ -94,7 +94,7 @@
 }
 
 @ARTICLE{Chen:Street:2008,
-    author    =  {Guoning Chen and Gregory Esch and Peter Wonka and Pascal M??ller and Eugene Zhang},
+    author    =  {Guoning Chen and Gregory Esch and Peter Wonka and Pascal Muller and Eugene Zhang},
     title         =  {Interactive Procedural Street Modeling},
     journal    =  {ACM Trans. Graph.},
     year        =  {2008},
