--- a/trunk/paper/paper.tex
+++ b/trunk/paper/paper.tex
@@ -55,7 +55,7 @@
 \begin{abstract}
 O rápido crescimento do poder de processamento das placas gráficas fez com que diversas tarefas migrassem da CPU para a GPU. Porém, as unidades de processamento gráfico podem ser vistas como aliadas da CPU, e não rivais. Este trabalho propõe um sistema \emph{multithread} que utiliza tanto a CPU quanto a GPU para minimizar o tempo gasto com a geração procedural de terrenos e permitir uma navegação fluida através de um mundo pseudo-infinito gerado proceduralmente.
 
-Ao final, uma comparação é feita com base em testes com três modelos de geração (apenas CPU, apenas GPU, GPU e CPU), com o objetivo de expor suas vantagens e desvantagens.
+Ao final, uma comparação é feita com base em experimentos utilizando diferentes modelos de geração, com o objetivo de expor suas vantagens e desvantagens.
 \end{abstract}
 
 %% The ``\keywordlist'' command prints out the keywords.
@@ -67,6 +67,7 @@ Ao final, uma comparação é feita com base em testes com três modelos de geração 
 \input{contribuicoes}
 \input{conceitosBasicos}
 \input{proposta}
+\input{figuras}
 \input{implementacao}
 \input{testes}
 \input{trabalhosFuturosConclusao}
