--- a/trunk/paper/introducao.tex
+++ b/trunk/paper/introducao.tex
@@ -6,4 +6,4 @@ A área de geração procedural envolve uma pesquisa constante por algoritmos que s
 
 Este trabalho propõe um sistema de geração procedural de terrenos que utilize tanto a CPU quanto a GPU, de maneira isolada ou combinada, com cada arquitetura ficando responsável por uma determinada porcentagem da carga de trabalho referente à geração. Através do sistema, será possível navegar em um terreno pseudo-infinito de forma interativa e sem quedas bruscas do \emph{frame rate}.
 
-O trabalho está organizado da seguinte maneira: na Seção \ref{trabalhosRelacionados} são apresentados alguns trabalhos relacionados e as principais contribuições deste trabalho. A Seção \ref{conceitosBasicos} revisa alguns conceitos pertinentes. A Seção \ref{proposta} apresenta o sistema proposto para a geração procedural utilizando tanto a CPU quanto a GPU e a Seção \ref{implementacao} detalha sua implementação. A Seção \ref{testes} faz uma discussão sobre os testes realizados. Finalmente, a Seção \ref{conclusao} apresenta a conclusão e a perspectiva para futuros trabalhos.
+O trabalho está organizado da seguinte maneira: na Seção \ref{trabalhosRelacionados} são apresentados alguns trabalhos relacionados e as principais contribuições deste trabalho. A Seção \ref{conceitosBasicos} revisa alguns conceitos pertinentes. A Seção \ref{proposta} apresenta o sistema proposto para a geração procedural utilizando tanto a CPU quanto a GPU e a Seção \ref{implementacao} detalha sua implementação. A Seção \ref{testes} faz uma discussão sobre os experimentos realizados. Finalmente, a Seção \ref{conclusao} apresenta a conclusão e a perspectiva para futuros trabalhos.
