--- a/trunk/paper/paper.tex
+++ b/trunk/paper/paper.tex
@@ -28,6 +28,7 @@
 %\contactinfo{\{name1,name3\}@xxx.yyyy.yyy \\
 %             *name2@zzzz.vvvv.vvv
 %}
+\author{60334}
 
 %% Keywords that describe your work.
 \keywords{modelagem procedural; gpu; gpgpu; programação paralela}
@@ -40,7 +41,7 @@
 \begin{document}
 
 \teaser{
-  \includegraphics[width=.8\linewidth]{img/teaser.png}
+  \includegraphics[width=.7\linewidth]{img/teaser.png}
   \caption{Terreno gerado proceduralmente.}
   \label{fig:teaser}
 }
