--- a/trunk/paper/paper.tex
+++ b/trunk/paper/paper.tex
@@ -54,9 +54,9 @@
 %% Abstract section.
 
 \begin{abstract}
-O rápido crescimento do poder de processamento das placas gráficas fez com que diversas tarefas migrassem da CPU para a GPU. Porém, as unidades de processamento gráfico podem ser vistas como aliadas da CPU, e não rivais. Este trabalho propõe um sistema \emph{multithread} que utiliza tanto a CPU quanto a GPU para minimizar o tempo gasto com a geração procedural de terrenos e permitir uma navegação fluida através de um mundo pseudo-infinito gerado proceduralmente.
+O rápido crescimento do poder de processamento das placas gráficas fez com que diversas tarefas migrassem da CPU para a GPU. Porém, as unidades de processamento gráfico podem ser vistas como aliadas da CPU, e não rivais. Este trabalho propõe um sistema \emph{multithread} que utiliza tanto a CPU quanto a GPU para a geração procedural de terrenos, compartilhando a carga de trabalho entre as arquiteturas. Dessa forma, busca-se minimizar o tempo gasto com a geração e assim permitir uma navegação fluida através de um mundo pseudo-infinito gerado proceduralmente.
 
-Ao final, uma comparação é feita com base em experimentos utilizando diferentes modelos de geração, com o objetivo de expor suas vantagens e desvantagens.
+Ao final, uma comparação é feita com base em experimentos utilizando diferentes configurações da arquitetura, com o objetivo de expor suas vantagens e aplicações.
 \end{abstract}
 
 %% The ``\keywordlist'' command prints out the keywords.
@@ -65,7 +65,7 @@ Ao final, uma comparação é feita com base em experimentos utilizando diferentes 
 
 \input{introducao}
 \input{trabalhosRelacionados}
-\input{contribuicoes}
+%\input{contribuicoes}
 \input{conceitosBasicos}
 \input{proposta}
 \input{figuras}
