--- a/trunk/paper/trabalhosRelacionados.tex
+++ b/trunk/paper/trabalhosRelacionados.tex
@@ -3,7 +3,7 @@
 
 A modelagem procedural de terrenos é uma área vastamente pesquisada, com diversos trabalhos que buscam sempre criar os terrenos mais realistas possíveis.
 
-Uma das técnicas de modelagem procedural de terrenos é o ruído Perlin \cite{perlinNoise}, uma função pseudo-aleatória que, dada uma entrada (posição), retorna um valor que possui uma suave transição com os seus vizinhos. Em \cite{improvedPerlinNoise} foi apresentado um ruído Perlin otimizado, que buscou adaptar o ruído às novas arquiteturas (GPUs), melhorar as propriedades visuais e introduzir uma única versão do ruído que retornaria os mesmos valores independentemente da plataforma de \emph{hardware} ou \emph{software}.
+Uma das técnicas utilizadas na modelagem procedural de terrenos é o ruído Perlin \cite{perlinNoise}, uma função pseudo-aleatória que, dada uma entrada (posição), retorna um valor que possui uma suave transição com os seus vizinhos. Em \cite{improvedPerlinNoise} foi apresentado um ruído Perlin otimizado, que buscou adaptar o ruído às novas arquiteturas (GPUs), melhorar as propriedades visuais e introduzir uma única versão do ruído que retornaria os mesmos valores independentemente da plataforma de \emph{hardware} ou \emph{software}.
 
 
 Em \cite{proceduralApproach} são apresentados alguns algoritmos que fazem uso do ruído Perlin e que são capazes de gerar terrenos de uma forma significativamente realista. Podemos citar os algoritmos \emph{fBm}, \emph{heterogenous terrain}, \emph{hybrid multifractal} e \emph{ridged multifractal}, sendo que este último foi o algoritmo utilizado neste trabalho.
