--- a/trunk/paper/paper.bib
+++ b/trunk/paper/paper.bib
@@ -117,8 +117,8 @@
 
 
  @ARTICLE{carlucio,
-	 author = {[blind review]},
-	 title = {[blind review] paper info hidden due to blind review},
-	 journal = {[blind review]}
+	 author = {Carlúcio S. Cordeiro and Luiz Chaimowicz},
+	 title = {Parallel Lazy Amplification: Real-Time Procedural Modeling and Rendering of Multi-Terabyte Scenes on a Single PC},
+	 journal = {VII Brazilian Symposium on Computer Games and Digital Entertainment, 2008, Belo Horizonte. SBGames 2008}
  }
 
