--- a/trunk/paper/paper.tex
+++ b/trunk/paper/paper.tex
@@ -21,17 +21,15 @@
 
 %% Author and Affiliation (multiple authors). Use: and between authors
 
-%\author{Name1 A. Surname1\\ Digital Games Lab 
-%        \and Name2 B. Surname2\\ Name3 C. Surname3\\ ZZZZ University
-%        \and Name4 D. Surname4\\ Farwest Research Center 
-%}
-%\contactinfo{\{name1,name3\}@xxx.yyyy.yyy \\
-%             *name2@zzzz.vvvv.vvv
-%}
-\author{60334}
+
+\author{Fábio Markus Miranda, Carlúcio S. Cordeiro, Luiz Chaimowicz\\Departamento de Ciência da Computação\\Universidade Federal de Minas Gerais}
+\contactinfo{\{fabiom, carlucio\}@gmail.com\\\{chaimo\}@dcc.ufmg.br}
+
+
+%\author{60334}
 
 %% Keywords that describe your work.
-\keywords{modelagem procedural; gpu; gpgpu; programação paralela}
+\keywords{computação gráfica; modelagem procedural; gpu; gpgpu; programação paralela}
 
 %% Start of the paper
 % Attention: As you need to insert EPS images in Postscript, 
@@ -54,7 +52,7 @@
 %% Abstract section.
 
 \begin{abstract}
-O rápido crescimento do poder de processamento das placas gráficas fez com que diversas tarefas migrassem da CPU para a GPU. Porém, as unidades de processamento gráfico podem ser vistas como aliadas da CPU, e não rivais. Este trabalho propõe um sistema \emph{multithread} que utiliza tanto a CPU quanto a GPU para a geração procedural de terrenos, compartilhando a carga de trabalho entre as arquiteturas. Dessa forma, busca-se minimizar o tempo gasto com a geração e assim permitir uma navegação fluida através de um mundo pseudo-infinito gerado proceduralmente.
+O rápido crescimento do poder de processamento das placas gráficas fez com que diversas tarefas migrassem da CPU para a GPU. Este trabalho propõe um sistema \emph{multithread} que utiliza tanto a CPU quanto a GPU para a geração procedural de terrenos, compartilhando a carga de trabalho entre as arquiteturas. Dessa forma, busca-se minimizar o tempo gasto com a geração e assim permitir uma navegação fluida através de um mundo pseudo-infinito gerado proceduralmente.
 
 Ao final, uma comparação é feita com base em experimentos utilizando diferentes configurações da arquitetura, com o objetivo de expor suas vantagens e aplicações.
 \end{abstract}
