--- a/trunk/paper/paper.bib
+++ b/trunk/paper/paper.bib
@@ -119,6 +119,7 @@
  @ARTICLE{carlucio,
 	 author = {Carlúcio S. Cordeiro and Luiz Chaimowicz},
 	 title = {Parallel Lazy Amplification: Real-Time Procedural Modeling and Rendering of Multi-Terabyte Scenes on a Single PC},
-	 journal = {VII Brazilian Symposium on Computer Games and Digital Entertainment, 2008, Belo Horizonte. SBGames 2008}
+	 journal = {VII Brazilian Symposium on Computer Games and Digital Entertainment, 2008, Belo Horizonte. SBGames 2008},
+	 year = {2008},
  }
 
